--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -3,31 +3,38 @@
 <head>
   <head>
 <!-- Title -->
-<title>Laser Welding Machines for Prismatic Battery Assembly | Indygreen Technologies</title>
+<head>
+  <!-- Title -->
+  <title>Prismatic Battery Cell Tester | Precision Testing Solutions - Indygreen Technologies</title>
 
-<!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies offers high-precision laser welding machines for lithium battery assembly — ensuring strong, accurate, and efficient welds for cylindrical, prismatic, and pouch cells in automated production lines." />
+  <!-- Meta Description -->
+  <meta name="description" content="Indygreen Technologies provides advanced prismatic battery cell testers designed for accurate capacity, voltage, and performance evaluation, ensuring superior lithium battery quality and reliability." />
 
-<!-- Meta Keywords -->
-<meta name="keywords" content="laser welding machines, lithium battery welding, laser welding system, battery assembly line, prismatic cell welding, cylindrical cell welding, pouch cell welding, lithium battery production equipment, battery manufacturing machinery, Indygreen Technologies" />
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="prismatic battery cell tester, lithium battery testing machine, cell capacity tester, voltage tester, battery performance tester, prismatic lithium cell testing, cell formation and grading system, battery QC equipment, lithium-ion testing solutions" />
 
-<!-- Canonical Tag -->
-<link rel="canonical" href="https://www.indygreentech.com/laser-welding-machines.html" />
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Laser Welding Machines for Lithium Battery Assembly | Indygreen Technologies" />
-<meta property="og:description" content="Precision laser welding machines for lithium battery manufacturing — designed for high-speed, accurate, and durable welds across cylindrical, prismatic, and pouch cell lines." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.indygreentech.com/laser-welding-machines.html" />
-<meta property="og:image" content="https://www.indygreentech.com/images/laser-welding-machine.png" />
-<meta property="og:site_name" content="Indygreen Technologies" />
+  <!-- Author & Publisher -->
+  <meta name="author" content="Indygreen Technologies" />
+  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Laser Welding Machines for Lithium Battery Assembly | Indygreen Technologies" />
-<meta name="twitter:description" content="Advanced laser welding machines for lithium battery production — delivering precision, durability, and efficiency in automated assembly lines." />
-<meta name="twitter:image" content="https://www.indygreentech.com/images/laser-welding-machine.png" />
-<meta name="twitter:site" content="@IndygreenTech" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Prismatic Battery Cell Tester | Precision Testing Solutions" />
+  <meta property="og:description" content="High-accuracy prismatic cell testers for lithium battery manufacturing – Indygreen Technologies ensures consistent quality and reliability through advanced testing automation." />
+  <meta property="og:url" content="https://www.indygreentech.com/cell-tester-for-prismatic.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Indygreen Technologies" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Prismatic Battery Cell Tester | Precision Testing Solutions" />
+  <meta name="twitter:description" content="Advanced prismatic battery cell testers by Indygreen Technologies for capacity, voltage, and performance validation of lithium batteries." />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.indygreentech.com/cell-tester-for-prismatic.html" />
+</head>
 
 
    <!-- Bootstrap CSS -->
@@ -320,7 +327,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Laser Welding Machines</h1>
+<h1 class="title text-white">Cell Testers</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -332,7 +339,7 @@
 <a title="Prismatic Batteries Lines" href="prismatic-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Laser Welding Machines</span>
+<span class="text-white">Cell Testers</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -342,15 +349,84 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/prismatic-cell-tester.png" alt="Cell Testers in India" title="Cell Testers in India" class="w-100">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 30A in India"><img src="img/5v-30a.png" class="card-img-top product-img" alt="5V 30A in India" title="5V 30A in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 30A <br> (8/16/32/64/128) CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Cell Testers</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 60A in India"><img src="img/5v-60a.png" class="card-img-top product-img" alt="5V 60A in India" title="5V 60A in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 60A <br> (8/16/32/64) CH </h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 100A in India"><img src="img/5v-100a.png" class="card-img-top product-img" alt="5V 100A in India" title="5V 100A in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 100A <br>(16/32/40/38) CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 200A in India"><img src="img/5v-200a.png" class="card-img-top product-img" alt="5V 200A in India" title="5V 200A in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 200A <br> (8/16/32) CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="5V 300A in India"><img src="img/5v-300a.png" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">5V 300A <br> (4/8/16) CH</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
   <!-- Footer -->
