--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -357,7 +357,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/fully-auto.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
+        <a href="automatic-lines.html" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/automatic-assembly-line.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Automatic Lines</h5>
@@ -374,15 +374,15 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="laser-welding-machines.html" title="Welding Machines Prismatic Batteries Lines in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="Welding Machines Prismatic Batteries Lines in India" title="Welding Machines Prismatic Batteries Lines in India"></a> 
+        <a href="laser-welding-machines.html" title="5V 20A 8CH in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Laser Welding Machines</h5>
-            <p class="card-text text-muted">Precision Laser Welding Machines designed specifically for prismatic battery manufacturing. Provide clean, strong welds with minimal heat distortion to ensure battery safety and performance.</p>
+            <h5 class="card-title text-center">Laser Welding Machine</h5>
+            <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="laser-cutters.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="laser-welding-machines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -398,7 +398,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
-            <p class="card-text text-muted">Accurate and reliable Cell Testers designed for prismatic battery quality control. Ensure precise measurement of voltage, capacity, and internal resistance to guarantee optimal battery performance and safety.</p>
+            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring capacity performance, safety, and quality validation for various consumer applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -429,7 +429,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
-            <p class="card-text text-muted">Efficient Sorting Machines designed Prismatic Batteries Lines to accurately classify cells based on voltage, capacity, and quality. Streamlines battery production with fast and precise sorting for improved pack performance.</p>
+            <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise IR, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
