--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -368,11 +368,11 @@
 <div class="container">
  
     <div class="app-sec col-lg-12">
-       <div class="app-image col-lg-6">
-      <img src="img/turnkey-applications.jpeg" alt="List Of Items" title="List Of Items">
+       <div class="products-image col-lg-5">
+      <img src="img/list-of-items-semi-prismatic.png" alt="List Of Items" title="List Of Items">
     </div>
-        <div class="application-sec product-description col-lg-6">
-        <h2>List Of Items</h2>
+        <div class="application-sec product-description col-lg-7 pl-5">
+        <h2>List Of Items</h2> <br>
           <ul>
             <li>Cell Grading Machine</li>
             <li>Cell Sorting Machine</li>
