--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -156,9 +156,28 @@
 
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+</a></li>
+<li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
+<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
+<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
+</a></li>
+<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
 </a></li>
 </ul>
 </li>
@@ -275,8 +294,31 @@
 <!-- Three -->
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
+<li>
+<a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
+<ul>
+<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
+<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
+<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
+</ul>
+</li>
+<li>
+<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<ul>
+<li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
+<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+</ul>
+</li>
+<li>
+<a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
+</li>
+<li>
+<a href="agv.html" title="AGV">AGV</a>
+</li>
 
 </ul>
 </li>
@@ -339,16 +381,38 @@
  
 <div class="container py-5">
 <div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/bess-container.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
-    </div>
     <div class="product-description col-lg-8">
-        <h2><strong>BESS Container Assembly Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+        <h2><strong>1. Automatic BESS Container Lines</strong></h2> <br>
+        <img src="img/automatic-bess-line.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
+    </div>
+    <div class="product-description col-lg-4">
+        <ul>
+          <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
+          <li>Container Transfer Method: Heavy load AGV</li>
+          <li>Pack Installation Method: Automatic Pack Insertion by Robot</li>
+          <li>Required Ground Load Bearing Capacity：5000kg/m²</li>
+          <li>Required Manpower:14persons (dynamic test station and spray system are not included)</li>
+        </ul>
     </div>
 </div>
 </div>
-
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-description col-lg-8">
+        <h2><strong>2. Manual BESS Container Lines</strong></h2> <br>
+        <img src="img/manual-bess-line.png" alt="Manual BESS Container Lines" title="Manual BESS Container Lines" class="w-100 mb-3">
+    </div>
+    <div class="product-description col-lg-4">
+        <ul>
+          <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
+          <li>Container Transfer Method: Heavy load AGV/ RGV/ Electric Flatcar/ Straddle</li>
+          <li>Pack Installation Method: Electric Lifting Forklift</li>
+          <li>Requiredground load bearing capacity：5000kg/m²</li>
+          <li>RequiredManpower:22 -28persons (dynamic test station and spray system are not included)</li>
+        </ul>
+    </div>
+</div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
