--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -1,36 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <head>
-<!-- Title -->
-<title>Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
+  <!-- Title -->
+  <title>Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
 
-<!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies provides advanced battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications." />
+  <!-- Meta Description -->
+  <meta name="description" content="Indygreen Technologies offers turnkey prismatic battery production line solutions including assembly, welding machines, cell testers, and automated sorting systems for efficient lithium battery manufacturing." />
 
-<!-- Meta Keywords -->
-<meta name="keywords" content="battery pack testers, lithium battery testing equipment, battery pack testing systems, voltage testing, capacity testing, performance testing, lithium battery quality control, EV battery testers, BESS battery testers, Indygreen Technologies" />
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="prismatic battery production line, prismatic cell assembly line, prismatic battery welding machines, prismatic cell testers, prismatic battery sorting machine, lithium-ion battery equipment, prismatic cell manufacturing solutions, prismatic battery turnkey Lines" />
 
-<!-- Canonical Tag -->
-<link rel="canonical" href="https://www.indygreentech.com/lithium-battery-pack-testers.html" />
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
-<meta property="og:description" content="High-precision battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.indygreentech.com/lithium-battery-pack-testers.html" />
-<meta property="og:image" content="https://www.indygreentech.com/images/battery-pack-tester.png" />
-<meta property="og:site_name" content="Indygreen Technologies" />
+  <!-- Author & Publisher -->
+  <meta name="author" content="Indygreen Technologies" />
+  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
-<meta name="twitter:description" content="Advanced battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications." />
-<meta name="twitter:image" content="https://www.indygreentech.com/images/battery-pack-tester.png" />
-<meta name="twitter:site" content="@IndygreenTech" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta property="og:description" content="Turnkey prismatic battery production solutions – Indygreen Technologies provides assembly lines, welding machines, testers, and sorting systems for high-quality lithium battery manufacturing." />
+  <meta property="og:url" content="https://www.indygreentech.com/prismatic-batteries-lines.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Indygreen Technologies" />
 
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta name="twitter:description" content="End-to-end prismatic battery turnkey production line solutions – including assembly, welding, testing & sorting for lithium batteries." />
 
-
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.indygreentech.com/prismatic-batteries-lines.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -155,12 +155,30 @@
 </li>
 
 
-
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+</a></li>
+<li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
+<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
+<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
+</a></li>
+<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
 </a></li>
 </ul>
 </li>
@@ -247,9 +265,6 @@
 
 </ul>
 </li>
-
-
-
 <li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
@@ -275,11 +290,32 @@
 </li>
 
 <!-- Three -->
-
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
-
+<li>
+<a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
+<ul>
+<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
+<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
+<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
+</ul>
+</li>
+<li>
+<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<ul>
+<li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
+<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+</ul>
+</li>
+<li>
+<a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
+</li>
+<li>
+<a href="agv.html" title="AGV">AGV</a>
+</li>
 </ul>
 </li>
 
@@ -321,19 +357,17 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Battery Pack Testers</h1>
+<h1 class="title text-white">Prismatic Batteries Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Prismatic Batteries Lines" href="prismatic-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Battery Pack Testers</span>
+<span class="text-white">Battery Test Quality Lab</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -343,17 +377,98 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/battery-pack-tester.png" alt="Battery Pack Testers in India" title="Battery Pack Testers in India" class="w-100">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/prismatic-semi-auto.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Temperature Test Chamber</h5>
+            <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="temperature-test-chamber.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Battery Pack Testers</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="humidity-tester.html" title="Humidity Tester in India"><img src="img/automatic-assembly-line.png" class="card-img-top product-img" alt=Humidity Tester in India" title="Humidity Tester in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Humidity Tester</h5>
+            <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="humidity-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+
+    <!-- Card 3 -->
+         <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="vibration-tester.html" title="Vibration Tester in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">Vibration Tester</h5>
+            <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="vibration-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
+<div class="container py-5">
+  <div class="row g-4">
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="explosion-chambers.html" title="Explosion Chambers in India"><img src="img/prismatic-cell-tester.png" class="card-img-top product-img" alt="Explosion Chambers in India" title="Explosion Chambers in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Explosion Chambers</h5>
+            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring capacity performance, safety, and quality validation for various consumer applications.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="explosion-chambers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card 1 -->
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="nail-panitration.html" title="Nail Panitration in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Nail Panitration</h5>
+            <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise IR, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="nail-panitration.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Card 3 -->
+  </div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
