--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -20,7 +20,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Lithium Battery Production Line Solutions - Indygreen Technologies" />
   <meta property="og:description" content="Turnkey lithium cell & battery pack production line solutions for EVs and energy storage. Delivering GWh-scale lithium battery plants with automation and precision." />
-  <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries.html" />
+  <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries-lines.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
@@ -30,7 +30,7 @@
   <meta name="twitter:description" content="Indygreen Technologies delivers turnkey lithium battery and cell production lines for EV mobility and energy storage projects worldwide." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/lithium-batteries.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/lithium-batteries-lines.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -133,7 +133,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
@@ -158,9 +158,28 @@
 
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+</a></li>
+<li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
+<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
+<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
+</a></li>
+<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
 </a></li>
 </ul>
 </li>
@@ -168,7 +187,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -250,7 +269,7 @@
 
 
 
-<li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
+<li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
 <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
@@ -277,8 +296,31 @@
 <!-- Three -->
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
+<li>
+<a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
+<ul>
+<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
+<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
+<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
+</ul>
+</li>
+<li>
+<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<ul>
+<li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
+<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+</ul>
+</li>
+<li>
+<a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
+</li>
+<li>
+<a href="agv.html" title="AGV">AGV</a>
+</li>
 
 </ul>
 </li>
@@ -411,7 +453,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-battery-pack-testers.html" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
+        <a href="battery-pack-testers.html" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
@@ -419,7 +461,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lithium-battery-pack-testers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="battery-pack-testers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -431,7 +473,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Other Machines</h5>
-            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including welding, sorting, automation, and testing solutions to enhance production efficiency and quality.</p>
+            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -442,6 +484,75 @@
     </div>
 
     <!-- Card 3 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/other-machines.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Battery Quality Test Lab</h5>
+            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="battery-quality-test-lab.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="lithium-battery-raw-materisl.html" title="Raw Materials in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Raw Materials</h5>
+            <p class="card-text text-muted">Reliable Battery Pack Testers for performance, safety, and durability validation. Ensuring accurate testing for various consumer battery applications with advanced automation.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="lithium-battery-raw-materisl.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/other-machines.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">BESS Cooling System</h5>
+            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="bess-cooling-sytem.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="agv.html" title="AGV"><img src="img/other-machines.png" class="card-img-top product-img" alt="AGV in India" title="AGV in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">AGV</h5>
+            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="agv.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
   <!-- Footer -->
@@ -471,7 +582,7 @@
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
   <li class="border-bottom"><a href="lithium-cell-lines.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
