--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -157,9 +157,28 @@
 
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+</a></li>
+<li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
+<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
+<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
+</a></li>
+<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
 </a></li>
 </ul>
 </li>
@@ -272,9 +291,31 @@
 
 <!-- Three -->
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
-
+<li>
+<a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
+<ul>
+<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
+<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
+<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
+</ul>
+</li>
+<li>
+<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<ul>
+<li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
+<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+</ul>
+</li>
+<li>
+<a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
+</li>
+<li>
+<a href="agv.html" title="AGV">AGV</a>
+</li>
 </ul>
 </li>
 
@@ -377,7 +418,7 @@
         <a href="laser-welding-machines.html" title="5V 20A 8CH in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">Laser Welding Machine</h5>
+            <h5 class="card-title ">Laser Welding Machine</h5>
             <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -403,21 +444,6 @@
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
             <a href="cell-testers-for-prismatic.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="battery-pack-testers.html" title="Battery Pack Testers Prismatic Batteries Lines in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers Prismatic Batteries Lines in India" title="Battery Pack Testers Prismatic Batteries Lines in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Battery Pack Testers</h5>
-            <p class="card-text text-muted">Advanced Battery Pack Testers designed for prismatic battery assemblies. Provide comprehensive testing of voltage, capacity, and safety parameters to ensure high performance and reliability of battery packs.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="battery-pack-testers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
