--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
+  <title>Battery Test Quality Lab | Lithium Battery Testing Solutions - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies offers turnkey prismatic battery production line solutions including assembly, welding machines, cell testers, and automated sorting systems for efficient lithium battery manufacturing." />
+  <meta name="description" content="Indygreen Technologies offers advanced Battery Test Quality Labs equipped with precision testing systems for lithium cells, battery packs, and modules to ensure safety, reliability, and performance compliance." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="prismatic battery production line, prismatic cell assembly line, prismatic battery welding machines, prismatic cell testers, prismatic battery sorting machine, lithium-ion battery equipment, prismatic cell manufacturing solutions, prismatic battery turnkey Lines" />
+  <meta name="keywords" content="battery test lab, lithium battery quality testing, battery safety testing, prismatic cell test, cylindrical cell testing, battery pack testing, BESS testing equipment, battery reliability lab, battery cycle life testing, battery inspection systems" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -18,19 +18,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting" />
-  <meta property="og:description" content="Turnkey prismatic battery production solutions – Indygreen Technologies provides assembly lines, welding machines, testers, and sorting systems for high-quality lithium battery manufacturing." />
-  <meta property="og:url" content="https://www.indygreentech.com/prismatic-batteries-lines.html" />
+  <meta property="og:title" content="Battery Test Quality Lab | Lithium Battery Testing Solutions" />
+  <meta property="og:description" content="Comprehensive lithium battery test quality labs by Indygreen Technologies for accurate testing of cells, modules, and packs to meet global performance and safety standards." />
+  <meta property="og:url" content="https://www.indygreentech.com/battery-test-quality-lab.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Prismatic Battery Production Line | Assembly, Welding, Testing & Sorting" />
-  <meta name="twitter:description" content="End-to-end prismatic battery turnkey production line solutions – including assembly, welding, testing & sorting for lithium batteries." />
+  <meta name="twitter:title" content="Battery Test Quality Lab | Lithium Battery Testing Solutions" />
+  <meta name="twitter:description" content="Indygreen Technologies provides fully equipped Battery Test Quality Labs for accurate testing and validation of lithium-ion cells, modules, and packs." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/prismatic-batteries-lines.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/battery-test-quality-lab" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -167,10 +167,10 @@
 <li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
 <li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
 <li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
-<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+<li class="nav-item mr-0"><a href="nail-panitration.html" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
@@ -304,7 +304,7 @@
 </ul>
 </li>
 <li>
-<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
@@ -357,7 +357,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Prismatic Batteries Lines</h1>
+<h1 class="title text-white">Battery Test Quality Lab</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -381,7 +381,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/prismatic-semi-auto.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
@@ -398,7 +398,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="humidity-tester.html" title="Humidity Tester in India"><img src="img/automatic-assembly-line.png" class="card-img-top product-img" alt=Humidity Tester in India" title="Humidity Tester in India"></a>
+        <a href="humidity-tester.html" title="Humidity Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Humidity Tester</h5>
@@ -415,10 +415,10 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="vibration-tester.html" title="Vibration Tester in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <a href="vibration-tester.html" title="Vibration Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">Vibration Tester</h5>
+            <h5 class="card-title">Vibration Tester</h5>
             <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -435,7 +435,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="explosion-chambers.html" title="Explosion Chambers in India"><img src="img/prismatic-cell-tester.png" class="card-img-top product-img" alt="Explosion Chambers in India" title="Explosion Chambers in India"></a>
+        <a href="explosion-chambers.html" title="Explosion Chambers in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Explosion Chambers in India" title="Explosion Chambers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Explosion Chambers</h5>
@@ -451,7 +451,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="nail-panitration.html" title="Nail Panitration in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
+        <a href="nail-panitration.html" title="Nail Panitration in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Nail Panitration</h5>
