--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -168,10 +168,10 @@
 <li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
 <li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
 <li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
-<li class="nav-item mr-0"><a href="Nail Panitration" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+<li class="nav-item mr-0"><a href="nail-panitration.html" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
+<li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
@@ -309,7 +309,7 @@
 </ul>
 </li>
 <li>
-<a href="Lithium-battery-raw-materieal.html" title="Raw Materials">Raw Materials</a>
+<a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
@@ -486,7 +486,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/other-machines.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
+        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/DEMO.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Quality Test Lab</h5>
@@ -507,7 +507,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-battery-raw-materisl.html" title="Raw Materials in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
+        <a href="lithium-battery-raw-material.html" title="Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
@@ -515,7 +515,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lithium-battery-raw-materisl.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="lithium-battery-raw-material.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -523,7 +523,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/other-machines.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
+        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/DEMO.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Cooling System</h5>
@@ -540,7 +540,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="agv.html" title="AGV"><img src="img/other-machines.png" class="card-img-top product-img" alt="AGV in India" title="AGV in India"></a>
+        <a href="agv.html" title="AGV"><img src="img/DEMO.png" class="card-img-top product-img" alt="AGV in India" title="AGV in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">AGV</h5>
