--- a/lithium-battery-raw-material.html
+++ b/lithium-battery-raw-material.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Solar Panel Production Line Solutions - Indygreen Technologies</title>
+  <!-- Title -->
+  <title>Lithium Battery Raw Materials | Cell Components & Pack Materials - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies provides complete turnkey solar panel production line solutions. From design to installation, we deliver automated solar PV module manufacturing plants with global expertise." />
+  <meta name="description" content="Indygreen Technologies supplies premium lithium battery raw materials including anode and cathode foils, separators, electrolytes, casings, and adhesives for advanced cell and pack manufacturing." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="solar panel production line, turnkey solar PV factory, solar module manufacturing setup, solar cell to module line, solar production plant India, automated solar module assembly, PV manufacturing equipment suppliers, solar panel factory turnkey solution" />
+  <meta name="keywords" content="lithium battery raw materials, anode materials, cathode materials, battery separator, lithium battery electrolyte, aluminum foil, copper foil, battery casing, lithium-ion cell components, EV battery materials, ESS battery manufacturing materials" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -17,19 +18,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Solar Panel Production Line Solutions - Indygreen Technologies" />
-  <meta property="og:description" content="Complete turnkey solar panel production line solutions including design, setup, and automation of solar PV manufacturing plants." />
-  <meta property="og:url" content="https://www.indygreentech.com/solar-panel-production-turnkey-line.html" />
+  <meta property="og:title" content="Lithium Battery Raw Materials | Cell Components & Pack Materials" />
+  <meta property="og:description" content="High-quality raw materials for lithium battery manufacturing — anode/cathode foils, separators, electrolytes, and casings supplied by Indygreen Technologies." />
+  <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries/lithium-battery-raw-materials" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Solar Panel Production Line Solutions - Indygreen Technologies" />
-  <meta name="twitter:description" content="Indygreen Technologies delivers turnkey solar PV module manufacturing line solutions with automation and high efficiency." />
+  <meta name="twitter:title" content="Lithium Battery Raw Materials | Indygreen Technologies" />
+  <meta name="twitter:description" content="Indygreen Technologies provides complete lithium battery raw material solutions — including copper foil, aluminum foil, separators, electrolytes, and casings." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/solar-panel-production-turnkey-line.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/lithium-batteries/lithium-battery-raw-materials.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -106,7 +107,7 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="semi-auto-lines.html" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
 <li class="nav-item mr-0"><a href="fully-auto-lines.html" title="Fully Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
@@ -152,7 +153,6 @@
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
-
 
 
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
@@ -229,7 +229,7 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Lines">Solar Panel Production Lines</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Lines">Solar Panel Production Lines</a>
 <ul>
 <li><a href="semi-auto-lines.html" title="Semi Auto Lines">Semi Auto Lines</a></li>
 <li><a href="fully-auto-lines.html" title="Fully Auto Lines">Fully Auto Lines</a></li>
@@ -290,7 +290,6 @@
 </li>
 
 <!-- Three -->
-
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
@@ -317,7 +316,6 @@
 <li>
 <a href="agv.html" title="AGV">AGV</a>
 </li>
-
 </ul>
 </li>
 
@@ -353,23 +351,23 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Solar Panel Production Lines</h1>
+<h1 class="title text-white">Raw Materials</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Solar PV" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Panel Production Lines </span>
+<span class="text-white">Raw Materials</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -383,15 +381,15 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="semi-auto-lines.html" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
+        <a href="lithium-cells.html" title="Lithium Cells in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lithium Cells in India" title="Lithium Cells in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Semi Auto Lines</h5>
-            <p class="card-text text-muted">Efficient and reliable Semi Auto Line designed for streamlined production processes. Ideal for small to medium-scale manufacturing, offering precision, flexibility, and cost-effective automation.</p>
+            <h5 class="card-title">Lithium Cells</h5>
+            <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="semi-auto-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="lithium-cell.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -400,32 +398,15 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
+        <a href="bms-tester.html" title="BMS Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Fully Auto Lines</h5>
-            <p class="card-text text-muted">High-performance Fully Auto Line for complete automation of manufacturing processes. Delivers maximum efficiency, precision, and productivity for large-scale production with minimal human intervention.</p>
+            <h5 class="card-title">BMS Tester</h5>
+            <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="fully-auto-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 3 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Tabber Stringers</h5>
-            <p class="card-text text-muted">Advanced Tabber and Stringer machine for high-speed solar cell interconnection. Ensures precise tabbing and stringing for enhanced efficiency and durability in PV module production.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="tabber-stringer.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="bms-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -433,44 +414,6 @@
   </div>
 </div>
 
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-     <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="laminator.html" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Laminator</h5>
-            <p class="card-text text-muted">High-precision Laminator designed for reliable and uniform encapsulation. Ideal for solar panel production, ensuring strong bonding, durability, and long-term performance.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="laminator.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="laser-cutters.html" title="Laser Cutters in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Laser Cutters in India" title="Laser Cutters in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Laser Cutters</h5>
-            <p class="card-text text-muted">High-precision Laser Cutters for clean, accurate cuts on metal, wood, plastic, and more. Ideal for industrial, commercial, and creative applications with advanced automation and minimal waste.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="laser-cutters.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- Card 3 -->
-  </div>
-</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
